pathfinder/tests/BugTracker/Tests/server-side_compilation_crash.SF-1607210.stable.err
stderr of test 'server-side_compilation_crash.SF-1607210` in directory 'tests/BugTracker` itself:


# 12:16:07 >  
# 12:16:07 >  Mtimeout -timeout 300 Mserver "--config=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/etc/MonetDB.conf" --debug=10 --set "monet_mod_path=/ufs/manegold/_/scratch0/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/lib64/MonetDB4:/ufs/manegold/_/scratch0/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/lib64/MonetDB4/lib:/ufs/manegold/_/scratch0/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/lib64/MonetDB4/bin" --set "gdk_dbfarm=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/var/dbfarm" --set "sql_logdir=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/var/sql_logs" --set "xquery_logdir=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/var/xquery_logs" --set mapi_port=36638 --set xrpc_port=42408 --set monet_prompt= --trace "--dbname=mTests_tests_BugTracker" --dbinit=" module(pathfinder);" ; echo ; echo Over..
# 12:16:07 >  


# 12:16:07 >  
# 12:16:07 >  Mtimeout -timeout 60 MapiClient -lxquery -oxml -umonetdb -Pmonetdb --host=localhost --port=36638 server-side_compilation_crash.SF-1607210_s00.xq
# 12:16:07 >  


# 12:16:07 >  
# 12:16:07 >  Mtimeout -timeout 60 MapiClient -lxquery -oxml -umonetdb -Pmonetdb --host=localhost --port=36638 server-side_compilation_crash.SF-1607210_s01.xq
# 12:16:07 >  

MAPI  = monetdb@localhost:36638
QUERY = <x/>
        /t000/t001/t002/t003/t004/t005/t006/t007/t008/t009
        /t010/t011/t012/t013/t014/t015/t016/t017/t018/t019
        /t020/t021/t022/t023/t024/t025/t026/t027/t028/t029
        /t030/t031/t032/t033/t034/t035/t036/t037/t038/t039
        /t040/t041/t042/t043/t044/t045/t046/t047/t048/t049
        /t050/t051/t052/t053/t054/t055/t056/t057/t058/t059
        /t060/t061/t062/t063/t064/t065/t066/t067/t068/t069
        /t070/t071/t072/t073/t074/t075/t076/t077/t078/t079
        /t080/t081/t082/t083/t084/t085/t086/t087/t088/t089
        /t090/t091/t092/t093/t094/t095/t096/t097/t098/t0
ERROR = !fatal error: aborted too deep recursion
        !# halted in /ufs/manegold/_/scratch0/Monet/Testing/Current/source/pathfinder/compiler/semantics/normalize.brg (reduce), line 711

# 12:16:07 >  
# 12:16:07 >  Mtimeout -timeout 60 MapiClient -lxquery -oxml -umonetdb -Pmonetdb --host=localhost --port=36638 server-side_compilation_crash.SF-1607210_s02.xq
# 12:16:07 >  


# 12:16:07 >  
# 12:16:07 >  Done.
# 12:16:07 >  

